bugfix - eliminação de scrollbar duplicada

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,8 @@
 
 html, body {
   height: 100vh;
-  background-color: #f5f5f5 !important;
+  background-color: #f5f5f5;
+  overflow: hidden;
 }
 
 body {
